--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "commit": "chmod +x git-push.sh && sh -c 'read -p \"Entrez votre message de commit : \" msg; git add . && git commit -m \"$msg\" && git push'"
   },
   "dependencies": {
     "react": "^18.3.1",
