--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "commit": "sh -c 'read -p \"Entrez votre message de commit : \" msg; echo \"$msg\" > .gitmessage.txt && git add . && git commit -F .gitmessage.txt && rm .gitmessage.txt && echo \"✅ Commit réussi, envoi sur GitHub...\" && git push || { echo \"❌ Erreur : Aucun changement détecté. Push annulé.\"; exit 1; }'"
+    "commit": "bash ./git-push.sh"
   },
   "dependencies": {
     "react": "^18.3.1",
