--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "commit": "/usr/bin/ScriptRyanDECIAN/git-commit"
+    "commit": "bash ./npm-run-commit.sh"
   },
   "dependencies": {
     "react": "^18.3.1",
